--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                         <div id="verificarLogin">
                         </div>
                     </div>
-                    <button id="acessar"  type="submit">Acessar</button>
+                    <button id="acessar" disabled="true" type="submit">Acessar</button>
                 </form>            
             </div>
                 <h3>Ainda não possui conta?</h3>
