add button disabled, mensagem del post, abrir modal ao clicar "acessar Post" e outras correções

--- a/pages/homePage.html
+++ b/pages/homePage.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="../styles/buttons.css">
     <link rel="stylesheet" href="../styles/text.css">
     <link rel="stylesheet" href="../styles/modal.css">
+    <link rel="stylesheet" href="../styles/toast.css">
     <title>Petinfo - Login</title>
 </head>
 <body>
