--- a/pages/register.html
+++ b/pages/register.html
@@ -29,14 +29,14 @@
                         <input type="email" id="email" placeholder="Digite seu e-mail aqui">
                     </div>
                     <div>
-                        <label for="email">Link da foto do perfil</label>
+                        <label for="img">Link da foto do perfil</label>
                         <input type="link" id="avatar" placeholder="Insira o link aqui">
                     </div>
                     <div>
                         <label for="password">Senha</label>
                         <input type="password" id="password" placeholder="Digite sua senha aqui">
                     </div>
-                    <button id="cadastrar" type="submit">Cadastrar</button>
+                    <button  id="cadastrar" type="submit">Cadastrar</button>
                 </form>
             </div>
                 <a href="../index.html"><button id="voltarParaLogin">Voltar para o login</button></a>
